Tip Calculator Completed

--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
                   <button class="tipSelection" id="third"  type="button " onclick="selectingTipAmount(tipOptions.thirdOption, numPeople) "> 15% </button>  
                 </li>
                 <li class="col el">
-                  <button class="tipSelection" id="fourth"  type="button" onclick="selectingTipAmount(tipOptions.fourthOption, numPeople) "> 20% </button>
+                  <button class="tipSelection" id="fourth"  type="button" onclick="selectingTipAmount(tipOptions.fourthOption, numPeople) "> 18% </button>
                 </li>
                 
             </ul>
             <ul class="row thirdRow">
                 <li class="col el">
-                    <button class="tipSelection" id="fifth" type="button" onclick="selectingTipAmount(tipOptions.fifthOption, numPeople) " > 25% </button>
+                    <button class="tipSelection" id="fifth" type="button" onclick="selectingTipAmount(tipOptions.fifthOption, numPeople) " > 20% </button>
                 </li>
                 <li class="col el">
-                    <button class="tipSelection custom" id="sixth" type="button" onclick="selectingTipAmount(tipOptions.sixthOption, numPeople) "> 50% </button>
+                    <button class="tipSelection" id="sixth" type="button" onclick="selectingTipAmount(tipOptions.sixthOption, numPeople) "> 25% </button>
                 </li>
                 
             </ul>
