inclusion of a final bill for the tip app and fix css issue

--- a/index.html
+++ b/index.html
@@ -77,16 +77,23 @@
                 <section class="container-fluid fourSection">
                     <ul class="row">
                         <li class="col labelResult"> 
-                            Tip Amount <br/> <br/><span>/ person  </span>
+                            Tip Amount <br/> <br/><span>/ Total </span>
                         </li>
-                        <li class="col result" id="tip"> $0.00</li> 
+                        <li class="col result" id="tip"> $0</li> 
                     </ul>
                     <ul class="row"> 
                         <li  class="col labelResult" >
-                            Total  <br/><br/> <span>/ person  </span>
+                            Total Tip <br/><br/> <span>/ person  </span>
                         </li>
-                        <li class="col result" id="personTip"> $0.00</li>
+                        <li class="col result" id="personTip"> $0</li>
                     </ul>
+                    <ul class="row"> 
+                        <li  class="col labelResult" >
+                            Final <br/><br/> <span>/ Check  </span>
+                        </li>
+                        <li class="col result" id="check"> $0</li>
+                    </ul>
+                    
                     <button class="tipSelection reset"  onClick="document.location.reload(true)"> Reset </button>
                 </section>
             </section>
